Route and render

--- a/views/greetedUser.handlebars
+++ b/views/greetedUser.handlebars
@@ -1,4 +1,4 @@
 
 {{{body}}}
 
-<h1>Hello, {{.}} has been greeted {{greetNumber}} times(s).</h1>
+<h1>Hello, {{userGreeted}} has been greeted {{greetNumber}} times(s).</h1>
