--- a/views/greeted.handlebars
+++ b/views/greeted.handlebars
@@ -4,7 +4,7 @@
   <th>Users Greeted</th>
   {{#each userCount}}
   <tr>
-    <td><a href="/greeted/:{{.}}">{{.}}</a></td>
+    <td><a href="/greeted/{{.}}">{{.}}</a></td>
   </tr>
   {{/each}}
 </table>
