Separated from index

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,3 @@
-<!-- <head>
-    <meta charset="utf-8">
-    <title>Greetings WebApp</title>
-    <link rel="stylesheet" href="public/index-grid.css">
-    <link rel="stylesheet" href="public/greet.css">
-</head> -->
-
 {{{body}}}
 
     <div class="container">
@@ -20,26 +13,26 @@
         <table>
           <tr>
             <td>
-              <input type="radio" name="language" value="english" class="languages">
+              <input type="radio" name="language" value="english" class="languages" id="radio1">
             </td>
             <td>
-              <label for="english">English</label>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input type="radio" name="language" value="sesotho" class="languages">
-            </td>
-            <td>
-              <label for="sesotho">Sesotho</label>
+              <label for="radio1">English</label>
             </td>
           </tr>
           <tr>
             <td>
-              <input type="radio" name="language" value="french" class="languages">
+              <input type="radio" name="language" value="sesotho" class="languages" id="radio2">
             </td>
             <td>
-              <label for="french">French</label>
+              <label for="radio2">Sesotho</label>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <input type="radio" name="language" value="french" class="languages" id="radio3">
+            </td>
+            <td>
+              <label for="radio3">French</label>
             </td>
           </tr>
         </table>
